<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deck Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="edit_length">Enter Length In Inches</string>
    <string name="edit_width">Enter Width In Inches</string>
    <string name="edit_height">Enter Height In Inches</string>
    <string name="button_calculate">Calculate</string>
    <string name="edit_email">Enter Your Email Address</string>
    <string name="edit_planname">Enter A Name For The Plan</string>
    <string name="button_save_plan">Save Plan</string>
    <string name="button_save">Save</string>
    <string name="title_activity_display_calculations">Materials and Cost</string>
    <string name="text_view"></string>
    <string name="calc_error">Unable to Calculate</string>
    <string name="area">Total Square Feet: </string>
    <string name="new_line"></string>
    <string name="mat_list">Materials List</string>
    <string name="total_price">Total Price: </string>
    <string name="south_pine">Southern Pine</string>
    <string name="foot_symbol">\'</string>
    <string name="inch_symbol">"</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
