<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SaveActivity" >

    <EditText android:id="@+id/edit_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_email"
        android:inputType="textEmailAddress" />
	
	<EditText android:id="@+id/edit_planname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_planname"
        android:inputType="text" />
  	   
	<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:onClick="saveToDb" />
	
	<TextView android:id="@+id/invalid_input"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=""/>

</LinearLayout>
